<resources>
    <string name="app_name">AndroidBasic</string>
    <string name="ButtonRick">ButtonRick</string>
    <string name="Button2">Button2</string>
    <string name="Button3">Button3</string>
    <string name="Button4">Button4</string>
    <string name="textView1">text1</string>
    <string name="textView2">text2</string>
    <string name="textView3">text3</string>
    <string name="textView4">text4</string>
    <string name="switch1">switch1</string>
    <string name="switch2">switch2</string>
    <string name="switch3">switch3</string>
    <string name="switch4">switch4</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>